# rules_k8s

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  go.mod  go.sum  requirements_lock.txt
examples/stamping/: BUILD  substitution_test.go  substitution_test.py
k8s/: BUILD  extensions.bzl  k8s.bzl  k8s_go_deps.bzl  k8s_py_deps.bzl  object.bzl  with-defaults.bzl
k8s/go/cmd/reverser/: BUILD.bazel  main.go
k8s/go/cmd/stamper/: BUILD.bazel  main.go
k8s/go/pkg/resolver/: BUILD.bazel  resolver.go  resolver_test.go
toolchains/kubectl/: extensions.bzl  kubectl_configure.bzl
