module(
    name = "rules_k8s",
    version = "0.7.0.buildbuddy.1",
    repo_name = "io_bazel_rules_k8s",
)

#####################################################################
# bazel deps
#####################################################################

bazel_dep(
    name = "rules_docker",
    repo_name = "io_bazel_rules_docker",
)
archive_override(
    module_name = "rules_docker",
    integrity = "sha256-weeds2FtoI9ugQo7q3YYOUnmkVxdmW9nS7GDV7G4EoM=",
    strip_prefix = "rules_docker-af99acc68556f43ecb5b90b037480650d7d47c02",
    # This is BuildBuddy fork of rules_docker with bzlmod support.
    # Diff: https://github.com/bazelbuild/rules_docker/compare/master...buildbuddy-io:rules_docker:sluongng/bzlmod-enable
    urls = ["https://github.com/buildbuddy-io/rules_docker/archive/af99acc68556f43ecb5b90b037480650d7d47c02.tar.gz"],
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_go", version = "0.53.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.42.0", repo_name = "bazel_gazelle")

#####################################################################
# Go
#####################################################################

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.2")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_go_cmp",
    "com_github_google_go_containerregistry",
    "in_gopkg_yaml_v3",
)

#####################################################################
# docker
#####################################################################
container = use_extension("@io_bazel_rules_docker//:extensions.bzl", "container")
container.pull(
    name = "go_image_static",
    digest = "sha256:ebd8cc37d22551dce0957ba8e58f03b22a8448bbf844c8c9ded4feef883b36bc",
    registry = "gcr.io",
    repository = "distroless/static",
)
use_repo(container, "go_image_static")

#####################################################################
# kubectl
#####################################################################

kubectl_toolchain = use_extension("//toolchains/kubectl:extensions.bzl", "kubectl_toolchain")
kubectl_toolchain.configure(name = "k8s_config")
use_repo(kubectl_toolchain, "k8s_config")

_CLUSTER = "gke_rules-k8s_us-central1-f_testing"

_CONTEXT = _CLUSTER

_NAMESPACE = "{STABLE_E2E_NAMESPACE}"

k8s_defaults = use_repo_rule("//k8s:k8s.bzl", "k8s_defaults")

k8s_defaults(
    name = "k8s_object",
    cluster = _CLUSTER,
    context = _CONTEXT,
    image_chroot = "us.gcr.io/rules_k8s/{BUILD_USER}",
    namespace = _NAMESPACE,
)

k8s_defaults(
    name = "k8s_deploy",
    cluster = _CLUSTER,
    context = _CONTEXT,
    image_chroot = "us.gcr.io/rules_k8s/{BUILD_USER}",
    kind = "deployment",
    namespace = _NAMESPACE,
)

register_toolchains(
    "@io_bazel_rules_k8s//toolchains/kubectl:kubectl_linux_amd64_toolchain",
    "@io_bazel_rules_k8s//toolchains/kubectl:kubectl_linux_arm64_toolchain",
    "@io_bazel_rules_k8s//toolchains/kubectl:kubectl_macos_x86_64_toolchain",
    "@io_bazel_rules_k8s//toolchains/kubectl:kubectl_macos_arm64_toolchain",
    "@io_bazel_rules_k8s//toolchains/kubectl:kubectl_windows_toolchain",
)
