load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "reverser_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/rules_k8s/k8s/go/cmd/reverser",
    visibility = ["//visibility:private"],
    deps = ["@in_gopkg_yaml_v3//:go_default_library"],
)

go_binary(
    name = "reverser",
    embed = [":reverser_lib"],
    visibility = ["//visibility:public"],
)
