load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "stamper_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/rules_k8s/k8s/go/cmd/stamper",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "stamper",
    embed = [":stamper_lib"],
    visibility = ["//visibility:public"],
)
