load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "resolver",
    srcs = ["resolver.go"],
    importpath = "github.com/bazelbuild/rules_k8s/k8s/go/pkg/resolver",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_go_containerregistry//pkg/authn",
        "@com_github_google_go_containerregistry//pkg/name",
        "@com_github_google_go_containerregistry//pkg/v1/remote",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@io_bazel_rules_docker//container/go/pkg/compat",
        "@io_bazel_rules_docker//container/go/pkg/utils",
    ],
)

go_test(
    name = "resolver_test",
    srcs = ["resolver_test.go"],
    embed = [":resolver"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
